--- a/Are u there FASE1/Are u there Completo/nbproject/private/private.properties
+++ b/Are u there FASE1/Are u there Completo/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\NIMITZ\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/Users/davidacevedo/Library/Application Support/NetBeans/8.2/build.properties
